<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="4"
    android:useDefaultMargins="true">


    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:gravity="end"
        android:textSize="42sp"
        tools:text="111" />


    <Button
        android:id="@+id/zeroing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:backgroundTint="#AADC3333"
        android:text="@string/key_zeroing" />

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:backgroundTint="#ED7E4B"
        android:text="@string/key_division" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_7" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_8" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_9" />

    <Button
        android:id="@+id/composition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#ED7E4B"
        android:text="@string/key_composition" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_4" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_5" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_6" />

    <Button
        android:id="@+id/key_subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#ED7E4B"
        android:text="@string/key_subtraction" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_1" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_2" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_3" />

    <Button
        android:id="@+id/key_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#ED7E4B"
        android:text="@string/key_addition" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_0" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:backgroundTint="#6A6666"
        android:text="@string/key_dot" />

</GridLayout>